Add presence dashboards

--- a/dashboards/skynet.yaml
+++ b/dashboards/skynet.yaml
@@ -12,5 +12,6 @@ views:
   - !include "view_lights_balcony.yaml"
   - !include "view_media.yaml"
   - !include "view_air_conditioning.yaml"
+  - !include "view_presence.yaml"
   - !include "view_qr_wifi.yaml"
   - !include "view_strava.yaml"
