Add card_hstack_energy_co2 and light_level to home_desktop

--- a/dashboards/picture_home_map.yaml
+++ b/dashboards/picture_home_map.yaml
@@ -178,6 +178,11 @@ elements:
     style:
       top: 90.8%
       left: 33%
+  - type: state-label # Sensors light level
+    entity: sensor.presence_light_level
+    style:
+      top: 70%
+      left: 83%
   - type: state-icon # Sensors door opened
     entity: binary_sensor.door_sensor_contact
     style:
