--- a/dashboards/view_sun_energy.yaml
+++ b/dashboards/view_sun_energy.yaml
@@ -4,19 +4,7 @@ icon: "mdi:solar-power"
 badges: []
 type: sidebar
 cards:
-- type: horizontal-stack
-  title: Electricity Map
-  cards:
-    - graph: line
-      type: sensor
-      detail: 1
-      entity: sensor.electricity_maps_co2_intensity
-      name: CO2 Intensity
-    - graph: line
-      type: sensor
-      detail: 1
-      entity: sensor.electricity_maps_grid_fossil_fuel_percentage
-      name: Fossil fuel
+- !include "card_hstack_energy_co2.yaml"
 - type: horizontal-stack
   title: Sun light
   cards:
