--- a/dashboards/view_home_desktop.yaml
+++ b/dashboards/view_home_desktop.yaml
@@ -56,6 +56,7 @@ cards:
         type: calendar
         entities:
           - calendar.google
+      - !include "card_hstack_energy_co2.yaml"
   - type: entities
     entities:
       - entity: input_select.pc_power_mode
