--- a/dashboards/view_home_mobile.yaml
+++ b/dashboards/view_home_mobile.yaml
@@ -31,8 +31,9 @@ cards:
   - type: markdown
     content: |-
       <center>
+
       <font size=5>{{ states('sensor.date') }}
-      <font size=0>
+      <font size=2>
     
       <font size=7><b>{{ states('sensor.time') }}
-  - !include "card_hstack_scenes.yaml" 
+  - !include "card_hstack_scenes_home.yaml" 
