--- a/dashboards/view_lights_mobile.yaml
+++ b/dashboards/view_lights_mobile.yaml
@@ -8,7 +8,7 @@ cards:
     view_layout:
       position: sidebar
     cards:
-    - !include "card_hstack_scenes.yaml"
+    - !include "card_hstack_scenes_lights.yaml"
     - type: grid
       columns: 2
       square: false
