Add home arrive/leave script

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -76,6 +76,11 @@ input_select:
 
 media_player: !include configuration/media_player.yaml
 
+counter:
+  switches_enabled:
+    name: "Count enabled switches"
+    minimum: 0
+
 input_boolean:
   lights_dim:
     name: Lights Dim
